feature(users and friends)
Практически полностью реализована работа с пользователями(добавление, обновление, получение пользователя, получение всех пользователей, добавление и подтверждение друга, получение списков всех друзей и всех запросов в друзья), осталась реализация удаления друга и полная реализация фильмов